--- a/pycftboot/Print_Code.tex
+++ b/pycftboot/Print_Code.tex
@@ -48,8 +48,6 @@ xrightmargin=-90pt,
 }
 
 \begin{document}
-
-
 %\begin{lstlisting}
 %def factorial(n):
 %   """The factorial of a number the slow way"""
@@ -62,6 +60,6 @@ xrightmargin=-90pt,
 %\end{lstlisting}
 
 %% Use this to include files
-\code{IsingGapClass.py}{/Users/MatthewDowens/Dropbox/PhD/bootstrap/pycftboot/3d_ising_gap.py}
+\code{revised-ising-gap.py}{/Users/MatthewDowens/Dropbox/PhD/bootstrap/pycftboot/revised-ising-gap.py}
 
 \end{document}
